# AutoSPH

./: .gitignore  CMakeLists.txt  DensityFunctor.h  HydroForceFunctor.h  README.md  SPHKernels.h  SPHParticle.cpp  main.cpp
cmake/modules/: autopas.cmake
src/: sph.cpp
src/particleContainer/AutoPasTemplateInstantiations/: AutoPasClass.cpp
